@@ -108,8 +108,11 @@ bool JackThreadedDriver::Init()
             jack_log("JackThreadedDriver::Init IsRealTime");
             // Will do "something" on OSX only...
             fThread.SetParams(GetEngineControl()->fPeriod, GetEngineControl()->fComputation, GetEngineControl()->fConstraint);
-            if (fThread.AcquireRealTime(GetEngineControl()->fPriority) < 0)
+            if (fThread.AcquireRealTime(GetEngineControl()->fPriority) < 0) {
                 jack_error("AcquireRealTime error");
+            } else {
+                set_threaded_log_function(); 
+            }
         }
         return true;
     } else {
